[package]
name = "pihole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
reqwest = {version = "^0.12"}
dotenv = {version = "0.15.0"}
# futures = {version ="^0.3"}
# serde_json ={version = "^1.0"}
